// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateNav beethoven 1`] = `
Array [
  1.000002,
  4.999998,
]
`;

exports[`calculateNav beethoven 2`] = `
Array [
  1.000002,
  1.3999979999999999,
]
`;

exports[`calculateNav beethoven 3`] = `
Array [
  1.000002,
  0.599998,
]
`;

exports[`calculateNav beethoven 4`] = `
Array [
  0.8,
  0,
]
`;

exports[`calculateNav beethoven 5`] = `
Array [
  1.000002,
  1.5999959999999995,
]
`;

exports[`calculateNav beethoven 6`] = `
Array [
  1.000002,
  0.39999600000000024,
]
`;

exports[`calculateNav beethoven 7`] = `
Array [
  0.6000000000000001,
  0,
]
`;

exports[`calculateNav beethoven 8`] = `
Array [
  1.000002,
  1.2999989999999997,
]
`;

exports[`calculateNav beethoven 9`] = `
Array [
  1.000002,
  0.6999990000000001,
]
`;

exports[`calculateNav beethoven 10`] = `
Array [
  0.6000000000000001,
  0,
]
`;

exports[`calculateNav mozart 1`] = `
Array [
  0,
  6,
]
`;

exports[`calculateNav mozart 2`] = `
Array [
  0.8,
  1.5999999999999996,
]
`;

exports[`calculateNav mozart 3`] = `
Array [
  1.2,
  0.40000000000000036,
]
`;

exports[`calculateNav mozart 4`] = `
Array [
  0.8,
  0,
]
`;

exports[`calculateNav mozart 5`] = `
Array [
  0.8,
  2,
]
`;

exports[`calculateNav mozart 6`] = `
Array [
  1.2000000000000002,
  0,
]
`;

exports[`calculateNav mozart 7`] = `
Array [
  0.6000000000000001,
  0,
]
`;

exports[`calculateNav mozart 8`] = `
Array [
  0.8,
  1.4,
]
`;

exports[`calculateNav mozart 9`] = `
Array [
  1.2,
  0.6000000000000001,
]
`;

exports[`calculateNav mozart 10`] = `
Array [
  0.6000000000000001,
  0,
]
`;

exports[`collectFee 1`] = `"Read Only Mode"`;

exports[`collectFee 2`] = `
Array [
  Array [
    10000000000000000000,
  ],
  Array [
    10000000000000000000,
  ],
]
`;

exports[`collectFee 3`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 40000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 2000000000,
    },
  ],
]
`;

exports[`create 1`] = `"Read Only Mode"`;

exports[`create 2`] = `"createWithWETHtxHash"`;

exports[`create 3`] = `"createTxHash"`;

exports[`create 4`] = `"createTxHash"`;

exports[`create 5`] = `"createWithWETHtxHash"`;

exports[`create 6`] = `
Array [
  Array [
    1000000000000000000,
    "wethAddr",
  ],
  Array [
    1000000000000000000,
    "wethAddr",
  ],
]
`;

exports[`create 7`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 160000,
      "gasPrice": 1000000000,
      "value": 1000000000000000000,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
      "value": 1000000000000000000,
    },
  ],
]
`;

exports[`create 8`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 160000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
    },
  ],
]
`;

exports[`fetchPrice 1`] = `"wrong env"`;

exports[`fetchPrice 2`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 1000000,
      "gasPrice": 1000000000,
      "nonce": 2,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`getAddress 1`] = `
Object {
  "aToken": "aToken",
  "bToken": "bToken",
  "feeCollector": "feeCollector",
  "operator": "operator",
  "oracle": "oracle",
  "roleManager": "roleManager",
}
`;

exports[`getEthWithTokens 1`] = `2`;

exports[`getEthWithTokens 2`] = `2`;

exports[`getEthWithTokens 3`] = `2.5`;

exports[`getEthWithTokens 4`] = `1.5`;

exports[`getEthWithTokens 5`] = `3`;

exports[`getStates 1`] = `
Object {
  "alpha": 100000000000000,
  "beta": 1,
  "createCommRate": 100000000000000,
  "ethCollateral": 1,
  "feeBalance": 100.00000000000001,
  "iterationGasThreshold": 10000,
  "lastOperationTime": 12345678980000,
  "lastPrice": 1e-9,
  "lastPriceTime": 1e+23,
  "limitLower": 1,
  "limitPeriodic": 15.000000000000002,
  "limitUpper": 2,
  "maturity": 1e+21,
  "minBalance": 100000,
  "navA": 2,
  "navB": 100.00000000000001,
  "nextResetAddrIndex": 10000000000000000000,
  "operationCoolDown": 1e+24,
  "period": 1e+21,
  "periodCoupon": 0.00015000000000000001,
  "preResetWaitingBlocks": 1000000000000000000,
  "priceFetchCoolDown": 1e+24,
  "redeemCommRate": 100000000000000,
  "resetPrice": 10000000.000000002,
  "resetPriceTime": 1e+21,
  "resetState": "",
  "state": "Loading",
  "totalSupplyA": 1e-13,
  "totalSupplyB": 1.0000000000000001e-16,
  "totalUsers": 1e+21,
}
`;

exports[`getTokenInterestOrLeverage 1`] = `3153600.0000000005`;

exports[`getTokenInterestOrLeverage 2`] = `0.8760000000000001`;

exports[`getTokenInterestOrLeverage 3`] = `1.6666666666666667`;

exports[`getTokenInterestOrLeverage 4`] = `-0.6666666666666667`;

exports[`getTokenInterestOrLeverage 5`] = `1.6666666666666667`;

exports[`getTokensPerEth 1`] = `
Array [
  50,
  50,
]
`;

exports[`getTokensPerEth 2`] = `
Array [
  40,
  40,
]
`;

exports[`getTokensPerEth 3`] = `
Array [
  33.333333333333336,
  66.66666666666667,
]
`;

exports[`getTokensPerEth 4`] = `
Array [
  66.66666666666667,
  33.333333333333336,
]
`;

exports[`getUserAddress 1`] = `
Array [
  Array [
    1,
  ],
]
`;

exports[`redeem 1`] = `"Read Only Mode"`;

exports[`redeem 2`] = `"redeemTxHash"`;

exports[`redeem 3`] = `"redeemTxHash"`;

exports[`redeem 4`] = `
Array [
  Array [
    1000000000000000000,
    1000000000000000000,
  ],
  Array [
    1000000000000000000,
    1000000000000000000,
  ],
]
`;

exports[`redeem 5`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 80000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
    },
  ],
]
`;

exports[`redeemAll 1`] = `"Read Only Mode"`;

exports[`redeemAll 2`] = `"redeemAllTxHash"`;

exports[`redeemAll 3`] = `"redeemAllTxHash"`;

exports[`redeemAll 4`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 80000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 100000,
    },
  ],
]
`;

exports[`setValue 1`] = `"Read Only Mode"`;

exports[`setValue 2`] = `
Array [
  Array [
    1,
    10,
  ],
  Array [
    1,
    10,
  ],
]
`;

exports[`setValue 3`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 50000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 2000000000,
    },
  ],
]
`;

exports[`startCustodian 1`] = `"wrong env"`;

exports[`startCustodian 2`] = `
Array [
  Array [
    "aAddr",
    "bAddr",
    "oracleAddr",
  ],
  Array [
    "aAddr",
    "bAddr",
    "oracleAddr",
  ],
]
`;

exports[`startCustodian 3`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 1000000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
    },
  ],
]
`;

exports[`triggerPreReset 1`] = `"wrong env"`;

exports[`triggerPreReset 2`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 120000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
    },
  ],
]
`;

exports[`triggerReset 1`] = `"wrong env"`;

exports[`triggerReset 2`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 4000000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
    },
  ],
]
`;
